--- a/FXExperienceTools/src/main/resources/fxml/FXMLSplinePanel.fxml
+++ b/FXExperienceTools/src/main/resources/fxml/FXMLSplinePanel.fxml
@@ -16,7 +16,7 @@
 <?import javafx.scene.shape.Circle?>
 <?import javafx.scene.shape.Rectangle?>
 
-<BorderPane id="SplineEditor" prefHeight="600.0" prefWidth="900.0" stylesheets="@../styles/spline.css" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.fxexperience.tools.controller.SplinePanelController">
+<BorderPane id="SplineEditor" prefHeight="600.0" prefWidth="900.0" stylesheets="@../styles/spline.css" xmlns="http://javafx.com/javafx/8.0.112" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.fxexperience.tools.controller.SplinePanelController">
    <center>
       <GridPane id="Background" fx:id="gridPane">
         <columnConstraints>
@@ -33,7 +33,7 @@
             <RowConstraints maxHeight="-Infinity" minHeight="-Infinity" vgrow="ALWAYS" />
           <RowConstraints vgrow="NEVER" />
           <RowConstraints maxHeight="-Infinity" minHeight="-Infinity" prefHeight="25.0" vgrow="ALWAYS" />
-          <RowConstraints maxHeight="-Infinity" minHeight="-Infinity" prefHeight="55.0" vgrow="NEVER" />
+          <RowConstraints maxHeight="-Infinity" minHeight="-Infinity" prefHeight="35.0" vgrow="NEVER" />
         </rowConstraints>
          <children>
             <HBox alignment="CENTER" spacing="5.0" GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" GridPane.rowIndex="10" GridPane.valignment="CENTER" GridPane.vgrow="ALWAYS">
@@ -43,7 +43,7 @@
             </HBox>
          </children>
          <padding>
-            <Insets bottom="10.0" left="10.0" right="20.0" top="10.0" />
+            <Insets bottom="10.0" left="10.0" right="20.0" top="36.0" />
          </padding>
       </GridPane>
    </center>
@@ -58,8 +58,8 @@
           <RowConstraints maxHeight="1.7976931348623157E308" vgrow="SOMETIMES" />
           <RowConstraints maxHeight="1.7976931348623157E308" vgrow="SOMETIMES" />
             <RowConstraints maxHeight="1.7976931348623157E308" vgrow="SOMETIMES" />
-            <RowConstraints maxHeight="-Infinity" prefHeight="30.0" vgrow="SOMETIMES" />
-            <RowConstraints maxHeight="1.7976931348623157E308" prefHeight="40.0" valignment="TOP" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="-Infinity" prefHeight="25.0" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="1.7976931348623157E308" prefHeight="30.0" valignment="CENTER" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
             <VBox alignment="TOP_CENTER" spacing="25.0" style="-fx-background-color: transparent;" GridPane.columnSpan="2" GridPane.rowIndex="2">
@@ -71,7 +71,7 @@
                      <padding>
                         <Insets bottom="5.0" />
                      </padding></Label>
-                  <Rectangle fx:id="rotateRectangle" arcHeight="10.0" arcWidth="10.0" height="110.0" stroke="#545454" strokeLineCap="ROUND" strokeType="INSIDE" width="110.0">
+                  <Rectangle fx:id="rotateRectangle" arcHeight="10.0" arcWidth="10.0" height="110.0" stroke="#545454" strokeLineCap="ROUND" strokeType="INSIDE" width="110.0" VBox.vgrow="SOMETIMES">
                      <fill>
                         <RadialGradient centerX="0.5056818181818182" centerY="0.5" cycleMethod="REPEAT" focusAngle="173.42" focusDistance="-2.220446049250313E-16" radius="0.07317073170731717">
                            <stops>
@@ -97,7 +97,7 @@
             <VBox alignment="CENTER" spacing="5.0" style="-fx-background-color: transparent;" GridPane.columnSpan="2" GridPane.rowIndex="3">
                <children>
                   <Label alignment="BOTTOM_CENTER" prefHeight="0.0" prefWidth="36.0" text="Fade" />
-                  <Rectangle fx:id="fadeSquare" arcHeight="5.0" arcWidth="5.0" height="100.0" stroke="#65655fab" strokeType="INSIDE" strokeWidth="3.0" width="140.0">
+                  <Rectangle fx:id="fadeSquare" arcHeight="5.0" arcWidth="5.0" height="100.0" stroke="#65655fab" strokeType="INSIDE" strokeWidth="3.0" width="140.0" VBox.vgrow="SOMETIMES">
                      <fill>
                         <LinearGradient endX="1.0" endY="1.0">
                            <stops>
@@ -113,7 +113,7 @@
                </children>
             </VBox>
             <Label text="Linear" GridPane.columnSpan="2" GridPane.halignment="CENTER" GridPane.rowIndex="4" GridPane.valignment="BOTTOM" />
-            <Group GridPane.columnSpan="2" GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" GridPane.rowIndex="5" GridPane.valignment="TOP">
+            <Group GridPane.columnSpan="2" GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" GridPane.rowIndex="5" GridPane.valignment="CENTER">
                <children>
                   <Rectangle arcHeight="20.0" arcWidth="20.0" height="20.0" stroke="#ffffff80" strokeLineCap="ROUND" strokeLineJoin="ROUND" strokeType="OUTSIDE" width="190.0">
                      <fill>
@@ -145,7 +145,7 @@
             <VBox alignment="TOP_CENTER" spacing="5.0" GridPane.columnSpan="2" GridPane.rowIndex="1" GridPane.vgrow="NEVER">
                <children>
                   <Label text="Scale" />
-                  <Circle fx:id="scaleCircle" radius="55.0" stroke="TRANSPARENT" strokeType="INSIDE">
+                  <Circle fx:id="scaleCircle" radius="55.0" stroke="TRANSPARENT" strokeType="INSIDE" VBox.vgrow="SOMETIMES">
                      <fill>
                         <RadialGradient centerX="0.5" centerY="0.5" focusDistance="-0.33333333333333326" radius="0.7380952380952381">
                            <stops>
@@ -159,6 +159,9 @@
                      </fill>
                   </Circle>
                </children>
+               <padding>
+                  <Insets top="5.0" />
+               </padding>
             </VBox>
          </children>
       </GridPane>
