--- a/FXExperienceTools/src/main/resources/styles/main_light.css
+++ b/FXExperienceTools/src/main/resources/styles/main_light.css
@@ -8,18 +8,19 @@ different terms and without source code for the larger work.
 */
 /*
     Created on : May 8, 2017, 12:05:37 AM
-    Author     : andje22
+    Author     : Eric Canull
 */
-
 .root {
-    -fe-light-body-background: #F0EEDF;
-    -fe-dark-inner-background: #2E3134;
-    -fe-light-header-text: #F1F4F6;
-    -fe-dark-border: #131313;
-    -fe-dark-body-text: #131313;
-    -fe-dark-inner-text: #131313;
+    -fe-header-background: #00466B;
+    -fe-body-background: #F1F4F6;
+    -fe-inner-background: #F1F4F6;
 
-    -fx-background-color: #F0EEDF;
+    -fe-header-text: #F1F4F6;
+    -fe-body-text: #000;
+    -fe-inner-text: #000;
+    -fe-border: #282828;
+
+    -fx-background-color: #F1F4F6;
     -fx-focus-color: #339797;
 }
 .nav-box {
@@ -33,7 +34,7 @@ different terms and without source code for the larger work.
  * Alert Notification		                                                   *
  ******************************************************************************/
 .status-dialog {
-    -fx-background-color: #3BA9E3;
+    -fx-background-color: #3AA6DF;
 }
 .status-label {
     -fx-text-fill: black;
@@ -53,13 +54,13 @@ different terms and without source code for the larger work.
 }
 .menu:hover,
 .menu-button .menu:hover {
-    -fx-text-fill: white;
-    -fx-background-color:  derive(rgb(147, 147, 147), -26%);
+    -fx-text-fill: -fe-header-text;
+    -fx-background-color: derive(-fe-header-background, 26%);
 
 }
 .main-menu {
     /*    -fx-background-color:  derive(rgb(147, 147, 147), -60%);*/
-    -fx-background-color: #00466B;
+    -fx-background-color: -fe-header-background;
     -fx-background-insets: 0 0 -1 0, 0, 1 0 0 0, 2 0 0 0;
     -fx-padding: 0.385em 0.692em 0.231em 0.692em;
     -fx-font-size: 0.875em;
@@ -76,22 +77,25 @@ different terms and without source code for the larger work.
 
 .menu-item:focused,
 .menu-item:hover{
-    -fx-background-color: derive(rgb(147, 147, 147), -26%);
+    -fx-background-color: derive(-fe-header-background, 26%);
     /*       -fx-background-insets: 1, 1, 1;*/
+}
 
-}
 .menu-button .menu {
-    -fx-text-fill: -fe-light-header-text;
+    -fx-text-fill: -fe-header-text;
 }
+
 .menu-bar .menu .label {
-    -fx-text-fill: -fe-light-header-text;
+    -fx-text-fill: -fe-header-text;
 }
+
 .menu-button menu showing {
-    -fx-background-color: derive(rgb(147, 147, 147),-26%);
+    -fx-background-color: transparent;
 }
+
 .context-menu {
     -fx-skin: "com.sun.javafx.scene.control.skin.ContextMenuSkin";
-    -fx-background-color: #00466B;
+    -fx-background-color: derive(rgb(147, 147, 147), -60%), derive(rgb(147, 147, 147), -60%), derive(rgb(147, 147, 147), 40%), -fe-header-background;
     /*    -fx-background-insets: 0, 1, 2;*/
 
     /*    -fx-padding: 0.666667em 0.083333em 0.666667em 0.083333em;  8 1 8 1 */
@@ -154,10 +158,8 @@ different terms and without source code for the larger work.
     -fx-border-width: 0 4 0 0;
 }
 .menu-toggle-button:hover {
-    -fx-border-color: -fe-dark-border;
+    -fx-border-color: -fe-border;
     -fx-border-width: 0 4 0 0;
-
-
 }
 
 
