--- a/FXExperienceTools/src/main/resources/styles/styler_dark.css
+++ b/FXExperienceTools/src/main/resources/styles/styler_dark.css
@@ -1,33 +1,26 @@
 /*
-Permissions of this copyleft license are conditioned on making available complete 
-source code of licensed works and modifications under the same license or the 
-GNU GPLv3. Copyright and license notices must be preserved. Contributors provide
-an express grant of patent rights. However, a larger work using the licensed work
-through interfaces provided by the licensed work may be distributed under
-different terms and without source code for the larger work.
-*/
-/* 
     Created on : Apr 24, 2017, 4:00:53 AM
-    Author     : ericc
+    Author     : Eric Canull
 */
-
 .root {
-    -fe-dark-body-background: #31363B;
-    -fe-dark-inner-background: #2E3134;
-    -fe-light-border: #616569;
-    -fe-light-body-text: #DCDCDC;
-    -fe-light-inner-text: #C2C2C3;
+
+    -fe-body-background: #31363B;
+    -fe-inner-background: #2E3134;
+    -fe-border: #616569;
+    -fe-body-text: #DCDCDC;
+    -fe-inner-text: #C2C2C3;
 
     -fx-background-color: #2E3134;
     -fx-focus-color: #339797;
 }
+
 /*******************************************************************************
- * Popup Color Picker MenuButton 			                                               *
+ * Popup Color Picker MenuButton 			                                   *
  ******************************************************************************/
 .popup-pane {
-    -fx-background-color: -fe-dark-body-background;
-    -fx-border-color: -fe-light-border;
-    -fx-focus-color:-fe-light-border;
+    -fx-background-color: -fe-body-background;
+    -fx-border-color: -fe-border;
+    -fx-focus-color:-fe-border;
     -fx-padding: 0;
 }
 .custom-menu-button {
@@ -39,58 +32,52 @@ different terms and without source code for the larger work.
 }
 
 .custom-menu-button {
-    -fx-background-color: derive(rgb(147, 147, 147), -60%), -fe-light-border, derive(rgb(147, 147, 147), 40%), -fe-dark-inner-background;
-    -fx-border-color: -fe-light-border;
+    -fx-background-color: derive(rgb(147, 147, 147), -60%), -fe-border, derive(rgb(147, 147, 147), 40%), -fe-inner-background;
+    -fx-border-color: -fe-border;
     -fx-font-size: 0.875em;
 }
 .custom-menu-item:focused,
 .custom-menu-item:hover{
     -fx-text-fill: #FFF;
-    -fx-border-color: -fe-light-border;
-    -fx-focus-color: -fe-light-border;
+    -fx-border-color: -fe-border;
+    -fx-focus-color: -fe-border;
     /*       -fx-background-insets: 1, 1, 1;*/
     -fx-background-radius: 1, 1, 1;
 }
 
 .custom-menu-button .label .text {
-    -fx-fill: -fe-light-inner-text;
+    -fx-fill: -fe-inner-text;
 }
 .color-label {
-    -fx-text-fill: -fe-light-body-text;
+    -fx-text-fill: -fe-body-text;
     -fx-font-size: 0.1em;
     /*     -fx-padding: 0 0 0 5;*/
 }
 .color-text-field {
-    -fx-text-fill: -fe-light-body-text;
+    -fx-text-fill: -fe-body-text;
     -fx-font-size: 0.1em;
     -fx-padding: 0.166667em 0.7em 0.166667em 0.7em;
 }
 
 #gradientComboBox .list-cell {
-    -fx-background-color: -fe-dark-inner-background;
-    -fx-border-color: -fe-light-border;
-    -fx-text-fill:  -fe-light-inner-text;
+    -fx-background-color: -fe-inner-background;
+    -fx-border-color: transparent;
+    -fx-text-fill:  -fe-inner-text;
 }
 #gradientComboBox {
-    -fx-border-color: -fe-light-border;
-    -fx-border-radius: 3.4, 2, 2;
+    -fx-border-radius: 3, 2, 2;
     -fx-background-insets: 0, 1, 2;
     -fx-background-radius: 3, 2, 2;
     -fx-padding: 0;
 }
 .split-pane {
-       -fx-background-color: -fe-dark-inner-background;
- 
-}
+       -fx-background-color: -fe-inner-background;
+ }
 
 .split-pane-divider {
     -fx-background-color: transparent;
     -fx-padding: 0;
-
 }
-
-
-
 
 .split-pane-caspian:horizontal {
     -fx-background-insets: -1 -1 -1 -1;
@@ -108,38 +95,44 @@ different terms and without source code for the larger work.
 }
 
 #font-box {
-    -fx-background-color: -fe-dark-inner-background;
-    -fx-border-color: -fe-light-border;
+    -fx-background-color: -fe-inner-background;
+    -fx-border-color: -fe-border;
     -fx-border-radius: 5;
     -fx-background-radius: 5;
     -fx-font-size:  0.9750em;
 }
 
 #font-box .context-menu {
-    -fx-text-fill: -fe-light-inner-text;
-    -fx-background-color: -fe-dark-inner-background;
-    -fx-border-color: -fe-light-border;
+    -fx-text-fill: -fe-inner-text;
+    -fx-background-color: -fe-inner-background;
+    -fx-border-color: -fe-border;
 }
 
 #font-box .label {
-    -fx-text-fill: -fe-light-body-text;
+    -fx-text-fill: -fe-body-text;
     -fx-font-size: 1em;
 }
 
 .slider-prop .track{
-    -fx-background-color: -fe-dark-inner-background; 
-    -fx-border-color: -fe-light-border;
+    -fx-background-color: -fe-inner-background;
+    -fx-border-color: -fe-border;
     -fx-background-insets: -0.2, 1, 2;
     -fx-background-radius: 3.2, 2, 2;
     -fx-border-radius: 2.2, 2, 2;
 }
 
 .slider-prop .thumb {
+    -fx-border-color: #111;
+    -fx-border-radius: 20px;
     -fx-background-color: rgba(147, 147, 147, .5);
 }
 
 .slider-prop .thumb:hover{
     -fx-background-color: rgb(147, 147, 147);
+}
+.slider-prop .axis:bottom {
+    -fx-tick-label-fill: -fe-body-text;
+    -fx-font-size: .73333em;
 }
 
 
@@ -156,12 +149,12 @@ different terms and without source code for the larger work.
     -fx-effect: dropshadow( two-pass-box, rgba(0, 0, 0, 0.2), 5, 0.0, 0, 1 );
 }
 .titled-pane:expanded .content {
-    -fx-background-color: -fe-dark-body-background;
+    -fx-background-color: -fe-body-background;
     -fx-border-color: transparent;
 
 }
 .titled-pane .content {
-    -fx-background-color: -fe-dark-body-background;
+    -fx-background-color: -fe-body-background;
     -fx-border-color: transparent;
 
 }
@@ -183,69 +176,68 @@ different terms and without source code for the larger work.
 
 .sub-title {
     -fx-text-fill: derive(rgb(147, 147, 147), 85%);
-    -fx-font-size: 0.875em;
+    -fx-font-size: 0.83333em;
     -fx-border-width: 0.5 0 0.5 0;
     -fx-border-color: derive(rgb(122, 122, 122), -85%);
-    -fx-background-color: 
-        linear-gradient(to left, derive(rgb(147, 147, 147), -20%), derive(rgb(147, 147, 147), -30%)),
-        linear-gradient(to left, derive(rgb(147, 147, 147), -30%) 0%, derive(rgb(147, 147, 147), -50%));
+
+    -fx-background-color: linear-gradient(to left, derive(#939393, -42%), derive(#939393, -58%));
 }
 .pane-shadow {
     -fx-background-color: derive(rgb(147, 147, 147), -87%);
     -fx-effect: dropshadow( two-pass-box, rgba(0, 0, 0, 0.6), 5, 0.0, 0, 0 );
 }
 .prop-label .text {
-    -fx-font-size:  0.9375em
+    -fx-font-size:  0.83333em;
 }
 
 .prop-label {
-    -fx-text-fill: -fe-light-body-text;
+    -fx-text-fill: -fe-body-text;
 }
 
 .title-label {
-    -fx-font-size: 0.875em;
-    -fx-text-fill: -fe-light-body-text;
+    -fx-font-size: 0.83333em;
+    -fx-text-fill: -fe-body-text;
 }
 .check-box-prop {
-    -fx-text-fill: -fe-light-inner-text;
-    -fx-font-size: 0.875em;
+    -fx-text-fill: -fe-inner-text;
+    -fx-font-size: 0.83333em;
 }
 
 .check-box-prop > .box {
-    -fx-background-color: -fe-dark-inner-background;
+    -fx-background-color: -fe-inner-background;
 }
 
 
 #input-text-field {
     -fx-skin: "com.sun.javafx.scene.control.skin.TextFieldSkin";
-    -fx-text-fill: -fe-light-inner-text;
-    -fx-font-size: 0.875em;
+    -fx-text-fill: -fe-inner-text;
+    -fx-font-size: 0.833335em;
 
 }
 .floating:top .tab-content-area {
     -fx-padding: 0;
     -fx-border-insets: 3, 3;
     -fx-border-radius: 3, 3;
-    -fx-border-color: -fe-light-border;
+    -fx-border-color: -fe-border;
     -fx-background-color: transparent;
     -fx-background-insets: 3, 3;
     -fx-background-radius: 3, 3;
 }
 .input-field {
     -fx-skin: "com.fxexperience.javafx.scene.control.skin.InputFieldSkin";
-    -fx-background-color: -fe-dark-inner-background;
+    -fx-background-color: -fe-inner-background;
     -fx-border-color: #65d2c6;
     -fx-background-insets: -0.2, 1, 2;
     -fx-background-radius: 3.2, 2, 2;
     -fx-border-radius: 2.2, 2, 2;
-    -fx-prompt-text-fill: -fe-light-inner-text;
+    -fx-prompt-text-fill: -fe-inner-text;
     -fx-cursor: text;
 
 }
 
 .input-field:focused {
-    -fx-background-color: -fe-dark-inner-background;
-    -fx-border-color: -fe-light-border;
+    -fx-background-color: -fe-inner-background;
+    -fx-border-color: -fe-border;
     -fx-background-insets: -0.2, 1, 2;
     -fx-background-radius: 3.2, 2, 2;
     -fx-border-radius: 2.2, 2, 2;
@@ -257,17 +249,17 @@ different terms and without source code for the larger work.
 
 .integer-field {
     -fx-skin: "com.fxexperience.javafx.scene.control.skin.IntegerFieldSkin";
-    -fx-background-color: -fe-dark-inner-background;
-    -fx-border-color: -fe-light-border;
+    -fx-background-color: -fe-inner-background;
+    -fx-border-color: -fe-border;
     -fx-background-insets: -0.2, 1, 2;
     -fx-background-radius: 3.2, 2, 2;
     -fx-border-radius: 2.2, 2, 2;
-    -fx-prompt-text-fill: -fe-light-inner-text;
+    -fx-prompt-text-fill: -fe-inner-text;
     -fx-cursor: text;
 }
 
 .integer-field:focused {
-    -fx-background-color: -fe-dark-inner-background;
+    -fx-background-color: -fe-inner-background;
     -fx-background-insets: -0.2, 1, 2;
     -fx-background-radius: 3.2, 2, 2;
     -fx-border-radius: 2.2, 2, 2;
@@ -279,19 +271,19 @@ different terms and without source code for the larger work.
 
 .double-field {
     -fx-skin: "com.fxexperience.javafx.scene.control.skin.DoubleFieldSkin";
-    -fx-font-size: 0.875em;
-    -fx-background-color: -fe-dark-inner-background;
-    -fx-border-color: -fe-light-border;
+    -fx-font-size: 0.83333em;
+    -fx-background-color: -fe-inner-background;
+    -fx-border-color: -fe-border;
     -fx-background-insets: -0.2, 1, 2;
     -fx-background-radius: 3.2, 2, 2;
     -fx-border-radius: 2.2, 2, 2;
-    -fx-prompt-text-fill: -fe-light-inner-text;
+    -fx-prompt-text-fill: -fe-inner-text;
     -fx-cursor: text;
 }
 
 .double-field:focused {
-    -fx-background-color: -fe-dark-inner-background;
-    -fx-border-color: -fe-light-border;
+    -fx-background-color: -fe-inner-background;
+    -fx-border-color: -fe-border;
     -fx-background-insets: -0.2, 1, 2;
     -fx-background-radius: 3.2, 2, 2;
     -fx-border-radius: 2.2, 2, 2;
@@ -303,19 +295,19 @@ different terms and without source code for the larger work.
 
 .webcolor-field {
     -fx-skin: "com.fxexperience.javafx.scene.control.skin.WebColorFieldSkin";
-    -fx-font-size: 0.875em;
-    -fx-background-color: -fe-dark-inner-background;
-    -fx-border-color: -fe-light-border;
+    -fx-font-size: 0.83333em;
+    -fx-background-color: -fe-inner-background;
+    -fx-border-color: -fe-border;
     -fx-background-insets: -0.2, 1, 2;
     -fx-background-radius: 3.2, 2, 2;
     -fx-border-radius: 2.2, 2, 2;
-    -fx-prompt-text-fill: -fe-light-inner-text;
+    -fx-prompt-text-fill: -fe-inner-text;
     -fx-cursor: text;
 }
 
 .webcolor-field:focused {
-    -fx-background-color: -fe-dark-inner-background;
-    -fx-border-color: -fe-light-border;
+    -fx-background-color: -fe-inner-background;
+    -fx-border-color: -fe-border;
     -fx-background-insets: -0.2, 1, 2;
     -fx-background-radius: 3.2, 2, 2;
     -fx-border-radius: 2.2, 2, 2;
@@ -325,24 +317,24 @@ different terms and without source code for the larger work.
     -fx-opacity: -fx-disabled-opacity;
 }
 .properties-combo-box {
-    -fx-background-color: -fe-dark-inner-background;
-    -fx-border-color: -fe-light-border;
+    -fx-background-color: -fe-inner-background;
+    -fx-border-color: -fe-border;
     -fx-background-insets: -1;
 }
 .properties-combo-box .arrow-button {
-    -fx-background-color: -fe-dark-inner-background;
-    -fx-border-color: -fe-light-border;
+    -fx-background-color: -fe-inner-background;
+    -fx-border-color: -fe-border;
     -fx-background-insets: -1;
     -fx-font-size: 0.875em;
 }
 
 .properties-combo-box .text {
-    -fx-text-fill: -fe-light-inner-text;
+    -fx-text-fill: -fe-inner-text;
 }
 
 .toggle-switch {
-    -fx-background-color: -fe-dark-inner-background;
-    -fx-border-color: -fe-light-border;
+    -fx-background-color: -fe-inner-background;
+    -fx-border-color: -fe-border;
     -fx-background-insets: -0.2, 1, 2;
     -fx-background-radius: 3.2, 2, 2;
     -fx-border-radius: 2.2, 2, 2;
