--- a/FXExperienceTools/src/main/resources/styles/styler_light.css
+++ b/FXExperienceTools/src/main/resources/styles/styler_light.css
@@ -8,28 +8,26 @@ different terms and without source code for the larger work.
 */
 /*
     Created on : Apr 24, 2017, 4:00:53 AM
-    Author     : ericc
+    Author     : Eric Canull
 */
-
 .root {
-    -fe-dark-header-background: #00466B;
-    -fe-light-body-background: #F0EEDF;
-    -fe-dark-inner-background: #2E3134;
-    -fe-light-header-text: #F1F4F6;
-    -fe-dark-border: #131313;
-    -fe-dark-body-text: #131313;
-    -fe-dark-inner-text: #131313;
+    -fe-header-background: #00466B;
+    -fe-body-background: #F1F4F6;
+    -fe-inner-background: #F1F4F6;
 
-    -fx-background-color: #F0EEDF;
+    -fe-header-text: #F1F4F6;
+    -fe-body-text: #000;
+    -fe-inner-text: #000;
+    -fe-border: #282828;
+
+    -fx-background-color: #F1F4F6;
     -fx-focus-color: #339797;
 }
+
 /*******************************************************************************
- * Popup Color Picker MenuButton 			                                               *
+ * Popup Color Picker MenuButton 			                                   *
  ******************************************************************************/
 .popup-pane {
-    -fx-background-color: -fe-light-body-background;
-    -fx-border-color: -fe-dark-border;
-    -fx-focus-color:-fe-dark-border;
     -fx-padding: 0;
 }
 .custom-menu-button {
@@ -37,72 +35,52 @@ different terms and without source code for the larger work.
     -fx-background-insets: -2;
 }
 .custom-menu-button .arrow {
-    -fx-background-color: -fe-dark-border;
 }
 
 .custom-menu-button {
-    -fx-background-color: derive(rgb(147, 147, 147), -60%), -fe-light-border, derive(rgb(147, 147, 147), 40%), -fe-dark-header-background;
-    -fx-border-color: -fe-light-border;
+    -fx-border-color: -fe-border;
     -fx-font-size: 0.875em;
 }
 .custom-menu-item:focused,
 .custom-menu-item:hover{
-    -fx-text-fill: #FFF;
-    -fx-border-color: -fe-dark-border;
-    -fx-focus-color: -fe-dark-border;
     /*       -fx-background-insets: 1, 1, 1;*/
     -fx-background-radius: 1, 1, 1;
 }
 
 .custom-menu-button .label .text {
-    -fx-fill: -fe-dark-inner-text;
 }
+
 .color-label {
-    -fx-text-fill: -fe-dark-body-text;
     -fx-font-size: 0.1em;
     /*     -fx-padding: 0 0 0 5;*/
 }
+
 .color-text-field {
-    -fx-text-fill: -fe-dark-body-text;
     -fx-font-size: 0.1em;
     -fx-padding: 0.166667em 0.7em 0.166667em 0.7em;
 }
 
 #gradientComboBox .list-cell {
-    -fx-background-color: -fe-light-inner-background;
-    -fx-border-color: -fe-dark-border;
-    -fx-text-fill:  -fe-dark-inner-text;
 }
+
 #gradientComboBox {
-    -fx-border-color: -fe-dark-border;
-    -fx-border-radius: 3.4, 2, 2;
+    -fx-border-radius: 3, 2, 2;
     -fx-background-insets: 0, 1, 2;
     -fx-background-radius: 3, 2, 2;
     -fx-padding: 0;
 }
-.split-pane {
-    -fx-background-color: -fe-light-inner-background;
 
+.split-pane {
 }
 
 .split-pane-divider {
-    -fx-background-color: transparent;
     -fx-padding: 0;
-
 }
 
-
-
-
 .split-pane-caspian:horizontal {
-    -fx-background-insets: -1 -1 -1 -1;
-    -fx-padding: 0;
 }
 
 .split-pane-caspian:horizontal .split-pane-divider {
-    -fx-background-insets: -1 -1 -1 -1;
-    -fx-background-color: transparent;
-    -fx-padding: 0;
 }
 
 #gradientComboBox .combo-box-popup .list-view .list-cell {
@@ -110,47 +88,28 @@ different terms and without source code for the larger work.
 }
 
 #font-box {
-    -fx-background-color: -fe-dark-inner-background;
-    -fx-border-color: -fe-dark-border;
     -fx-border-radius: 5;
     -fx-background-radius: 5;
-    -fx-font-size:  0.9750em;
+    -fx-font-size:  0.83333em;
 }
-
 #font-box .context-menu {
-    -fx-text-fill: -fe-dark-inner-text;
-    -fx-background-color: -fe-dark-inner-background;
-    -fx-border-color: -fe-light-border;
+    -fx-background-color: rgb(189,189,189);
 }
 
 #font-box .label {
-    -fx-text-fill: -fe-light-body-text;
-    -fx-font-size: 1em;
+    -fx-font-size: .83333em;
 }
 
 .slider-prop .track{
-    -fx-background-color: -fe-light-inner-background;
-    -fx-border-color: -fe-dark-border;
     -fx-background-insets: -0.2, 1, 2;
     -fx-background-radius: 3.2, 2, 2;
     -fx-border-radius: 2.2, 2, 2;
 }
 
-.slider-prop .thumb {
-    -fx-background-color: rgba(147, 147, 147, .5);
-}
-
-.slider-prop .thumb:hover{
-    -fx-background-color: rgb(147, 147, 147);
-}
-
-
 /*******************************************************************************
  * Title Pane    	                                                       *
  ******************************************************************************/
-
 .titled-pane > .title {
-    -fx-background-color: derive(rgb(147, 147, 147), -60%), derive(rgb(147, 147, 147), -60%), derive(rgb(147, 147, 147), 40%), fe-dark-header-background);
     -fx-background-insets: 0 0 -1 0, 0, 1 0 0 0, 2 0 0 0;
     -fx-padding: 0.385em 0.692em 0.231em 0.692em;
     -fx-font-size: 0.875em;
@@ -158,69 +117,47 @@ different terms and without source code for the larger work.
     -fx-effect: dropshadow( two-pass-box, rgba(0, 0, 0, 0.2), 5, 0.0, 0, 1 );
 }
 .titled-pane:expanded .content {
-    -fx-background-color: -fe-light-body-background;
     -fx-border-color: transparent;
 
-}
-.titled-pane .content {
-    -fx-background-color: -fe-light-body-background;
-    -fx-border-color: transparent;
-
-}
-.titled-pane .context-menu {
-    -fx-background-color: derive(rgb(147, 147, 147), -60%), derive(rgb(147, 147, 147), -60%), derive(rgb(147, 147, 147), 40%), fe-dark-header-background);
-}
-
-.titled-pane > .title > .text {
-    -fx-fill: derive(rgb(147, 147, 147), -70%)
 }
 
 .titled-pane > .title > .arrow-button {
     -fx-padding: -0.154em 0.583em 0.0em 0.0em;
 }
 .titled-pane > .title > .arrow-button > .arrow {
-    -fx-background-color: derive(rgb(147, 147, 147), -32%);
     -fx-padding: 0.154em 0.231em 0.231em 0.231em; /* 2 3 3 3 */
 }
 
 .sub-title {
-    -fx-text-fill: -fe-dark-body-text;
+    -fx-text-fill: white;
     -fx-font-size: 0.875em;
     -fx-border-width: 0.5 0 0.5 0;
-    -fx-border-color: -fe-dark-border-text;
+    -fx-border-color: derive(rgb(122, 122, 122), -85%);
     -fx-background-color:
-            linear-gradient(to left, derive(rgb(147, 147, 147), -20%), derive(rgb(147, 147, 147), -30%)),
-            linear-gradient(to left, derive(rgb(147, 147, 147), -30%) 0%, derive(rgb(147, 147, 147), -50%));
+            linear-gradient(to left, derive(rgb(197, 198, 197), 10%), derive(rgb(233, 233, 233), -18%));
 }
 .pane-shadow {
     -fx-background-color: derive(rgb(147, 147, 147), -87%);
     -fx-effect: dropshadow( two-pass-box, rgba(0, 0, 0, 0.6), 5, 0.0, 0, 0 );
 }
 .prop-label .text {
-    -fx-font-size:  0.9375em
+    -fx-font-size:  0.83333em
 }
 
 .prop-label {
-    -fx-text-fill: -fe-dark-body-text;
+    -fx-font-size: 0.83333em;
 }
 
 .title-label {
-    -fx-font-size: 0.875em;
-    -fx-text-fill: -fe-light-body-text;
+    -fx-font-size: 0.83333em;
 }
 .check-box-prop {
-    -fx-text-fill: -fe-light-inner-text;
-    -fx-font-size: 0.875em;
+    -fx-font-size: 0.83333em;
 }
-
-.check-box-prop > .box {
-    -fx-background-color: -fe-dark-inner-background;
-}
-
 
 #input-text-field {
     -fx-skin: "com.sun.javafx.scene.control.skin.TextFieldSkin";
-    -fx-text-fill: -fe-dark-inner-text;
+    -fx-text-fill: -fe-inner-text;
     -fx-font-size: 0.875em;
 
 }
@@ -228,26 +165,21 @@ different terms and without source code for the larger work.
     -fx-padding: 0;
     -fx-border-insets: 3, 3;
     -fx-border-radius: 3, 3;
-    -fx-border-color: -fe-dark-border;
     -fx-background-color: transparent;
     -fx-background-insets: 3, 3;
     -fx-background-radius: 3, 3;
 }
 .input-field {
     -fx-skin: "com.fxexperience.javafx.scene.control.skin.InputFieldSkin";
-    -fx-background-color: -fe-dark-inner-background;
     -fx-border-color: #65d2c6;
     -fx-background-insets: -0.2, 1, 2;
     -fx-background-radius: 3.2, 2, 2;
     -fx-border-radius: 2.2, 2, 2;
-    -fx-prompt-text-fill: -fe-dark-inner-text;
     -fx-cursor: text;
 
 }
 
 .input-field:focused {
-    -fx-background-color: -fe-dark-inner-background;
-    -fx-border-color: -fe-dark-border;
     -fx-background-insets: -0.2, 1, 2;
     -fx-background-radius: 3.2, 2, 2;
     -fx-border-radius: 2.2, 2, 2;
@@ -259,17 +191,13 @@ different terms and without source code for the larger work.
 
 .integer-field {
     -fx-skin: "com.fxexperience.javafx.scene.control.skin.IntegerFieldSkin";
-    -fx-background-color: -fe-dark-inner-background;
-    -fx-border-color: -fe-dark-border;
     -fx-background-insets: -0.2, 1, 2;
     -fx-background-radius: 3.2, 2, 2;
     -fx-border-radius: 2.2, 2, 2;
-    -fx-prompt-text-fill: -fe-dark-inner-text;
     -fx-cursor: text;
 }
 
 .integer-field:focused {
-    -fx-background-color: -fe-dark-inner-background;
     -fx-background-insets: -0.2, 1, 2;
     -fx-background-radius: 3.2, 2, 2;
     -fx-border-radius: 2.2, 2, 2;
@@ -281,19 +209,14 @@ different terms and without source code for the larger work.
 
 .double-field {
     -fx-skin: "com.fxexperience.javafx.scene.control.skin.DoubleFieldSkin";
-    -fx-font-size: 0.875em;
-    -fx-background-color: -fe-dark-inner-background;
-    -fx-border-color: -fe-dark-border;
+    -fx-font-size: 0.83333em;
     -fx-background-insets: -0.2, 1, 2;
     -fx-background-radius: 3.2, 2, 2;
     -fx-border-radius: 2.2, 2, 2;
-    -fx-prompt-text-fill: -fe-dark-inner-text;
     -fx-cursor: text;
 }
 
 .double-field:focused {
-    -fx-background-color: -fe-dark-inner-background;
-    -fx-border-color: -fe-dark-border;
     -fx-background-insets: -0.2, 1, 2;
     -fx-background-radius: 3.2, 2, 2;
     -fx-border-radius: 2.2, 2, 2;
@@ -305,19 +228,15 @@ different terms and without source code for the larger work.
 
 .webcolor-field {
     -fx-skin: "com.fxexperience.javafx.scene.control.skin.WebColorFieldSkin";
-    -fx-font-size: 0.875em;
-    -fx-background-color: -fe-dark-inner-background;
-    -fx-border-color: -fe-dark-border;
+    -fx-font-size: 0.83333em;
     -fx-background-insets: -0.2, 1, 2;
     -fx-background-radius: 3.2, 2, 2;
     -fx-border-radius: 2.2, 2, 2;
-    -fx-prompt-text-fill: -fe-dark-inner-text;
     -fx-cursor: text;
 }
 
 .webcolor-field:focused {
-    -fx-background-color: -fe-dark-inner-background;
-    -fx-border-color: -fe-dark-border;
+    -fx-border-color: -fe-border;
     -fx-background-insets: -0.2, 1, 2;
     -fx-background-radius: 3.2, 2, 2;
     -fx-border-radius: 2.2, 2, 2;
@@ -327,24 +246,18 @@ different terms and without source code for the larger work.
     -fx-opacity: -fx-disabled-opacity;
 }
 .properties-combo-box {
-    -fx-background-color: -fe-dark-inner-background;
-    -fx-border-color: -fe-dark-border;
     -fx-background-insets: -1;
 }
 .properties-combo-box .arrow-button {
-    -fx-background-color: -fe-dark-inner-background;
-    -fx-border-color: -fe-dark-border;
     -fx-background-insets: -1;
     -fx-font-size: 0.875em;
 }
 
 .properties-combo-box .text {
-    -fx-text-fill: -fe-dark-inner-text;
+    -fx-text-fill: -fe-inner-text;
 }
 
 .toggle-switch {
-    -fx-background-color: -fe-dark-inner-background;
-    -fx-border-color: -fe-dark-border;
     -fx-background-insets: -0.2, 1, 2;
     -fx-background-radius: 3.2, 2, 2;
     -fx-border-radius: 2.2, 2, 2;
